@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.325 2007/08/06 00:33:05 smb Exp $
+# $NetBSD: Makefile,v 1.326 2007/08/07 12:40:37 ghen Exp $
 #
 
 COMMENT=	Electronic mail utilities
@@ -38,6 +38,7 @@ SUBDIR+=	claws-mail-pgpmime
 SUBDIR+=	claws-mail-rssyl
 SUBDIR+=	claws-mail-smime
 SUBDIR+=	claws-mail-spamassassin
+SUBDIR+=	claws-mail-synce
 SUBDIR+=	claws-mail-trayicon
 SUBDIR+=	columba
 SUBDIR+=	coolmail
